--- a/src/gallery-introtour-ui/tests/unit/index.html
+++ b/src/gallery-introtour-ui/tests/unit/index.html
@@ -2,24 +2,19 @@
 <html>
 <head>
     <title>gallery-introtour-ui</title>
-    <script src="/build/yui/yui.js"></script>
-    <script src="js/tests.js"></script>
+	<script src="http://yui.yahooapis.com/3.8.1/build/yui/yui-min.js"></script>
+    <script src="js/testintrotour.js"></script>
     <meta charset="utf-8" />
 </head>
 <body class="yui3-skin-sam">
+		<div id="hello1">Start here.</div>
+        <br><br><br><br><br><br><br><br><br><br>
+        <div id="hello2">The go here.</div>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <div id="hello3">This is also useful.</div>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <div style="margin-left:600px;" id="hello4">Save changes</div>
 <div id="logger"></div>
 
-<script>
-YUI({
-    coverage: ['gallery-introtour-ui'],
-    filter: (window.location.search.match(/[?&]filter=([^&]+)/) || [])[1] || 'raw'
-}).use('test-console', 'test', 'module-tests', function(Y) {
-    
-    (new Y.Test.Console()).render('#logger');
-
-    Y.Test.Runner.setName('gallery-introtour-ui');
-    Y.Test.Runner.run();
-});
-</script>
 </body>
 </html>
